2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
	
	* [w3m-dev 02901] ACCEPT_BAD_COOKIE_*
	* file.c (readHeader): accept_bad_cookie is one of ACCEPT_BAD_COOKIE_*
	* fm.h (PERHAPS): deleted
	* fm.h (ACCEPT_BAD_COOKIE_*): added
	* rc.c (n_s): added
	* rc.c (N_S): added
	* rc.c (badcookiestr): use N_S(ACCEPT_BAD_COOKIE_*)

2002-01-24  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02896] fid attr value should be in sequence
	* table.c (feed_table_tag): s/line/""/ for HTML_FORM,HTML_N_FORM

2002-01-24  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02894] Re: goURL
	* file.c (HTMLtagproc1): s/goURL/gorURL/
	* keybind.c (EscKeymap): M-u = GOTO_RELATIVE
	* keybind_lynx.c (EscKeymap): ditto
	* doc/keymap.default: ditto
	* doc/keymap.lynx: ditto
	* doc-jp/keymap.default: ditto
	* doc-jp/keymap.lynx: ditto
	* main.c (MAIN): add $HTTP_HOME or $WWW_HOME to history 
	* main.c (MAIN): add history even if it is local file or local cgi
	* main.c (goURL0): change args, def_url -> current
	* main.c (goURL0): delete ParsedURL *b_url
	* main.c (goURL0): add Buffer *cur_buf
	* main.c (goURL0): if current is supplied, use its URL as default
	* main.c (goURL0): add URL to history if loadURL succeeded
	* main.c (goURL): change args for goURL0()
	* main.c (gorURL): ditto

2002-01-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02889] fix scripts/multipart/multipart.cgi.in
	* scripts/multipart/multipart.cgi.in: return "" instead of next

2002-01-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02885] Re: goURL
	* funcname.tab (GOTO_RELATIVE): added
	* main.c (goURL0): renamed from goURL
		don't add http:// here, if base URL is NULL, cmd_loadURL()
		will add http:// when necessary
	* main.c (goURL): go to URL with current URL
	* main.c (gorURL): go to relative URL
	* proto.h (gorURL): added
	* doc/README.func (GOTO_RELATIVE): added
	* doc-jp/README.func (GOTO_RELATIVE): ditto

2002-01-22  Fumitoshi UKAI  <ukai@debian.or.jp>
