@@ -1,4 +1,10 @@
 2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02901] DNS_ORDER_*
+	* fm.h (DNS_ORDER_*): added
+	* rc.c (dnsorders): use N_S(DNS_ORDER_*)
+
+2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 	
 	* [w3m-dev 02901] ACCEPT_BAD_COOKIE_*
 	* file.c (readHeader): accept_bad_cookie is one of ACCEPT_BAD_COOKIE_*
@@ -2252,4 +2258,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.256 2002/01/24 16:59:16 ukai Exp $
+$Id: ChangeLog,v 1.257 2002/01/24 17:07:40 ukai Exp $
